--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Ripple Systems</title>
 <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="iLand Multipurpose Landing Page Template">
+<meta name="description" content="">
 <meta name="keywords" content="iLand HTML Template, iLand Landing Page, Landing Page Template">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
 <link href="https://fonts.googleapis.com/css?family=Open%20Sans:300,400,500,600,700" rel="stylesheet" type="text/css">
@@ -34,7 +34,7 @@
             <li><a class="page-scroll" href="#review-section">Reviews</a></li>
             <li><a class="page-scroll" href="#pricing">Pricing</a></li>
             <li><a class="page-scroll" href="#contact">Contact</a></li>
-            <li><a href="#" style ="background-color: lightseagreen; color: white">Enter Console</a></li>
+            <li><a href="Trackersite/map.html" style ="background-color: lightseagreen; color: white">Enter Console</a></li>
           </ul>
         </div>
       </div>
@@ -51,7 +51,7 @@
           <div class="hero-content">
             <h1 class="wow fadeInUp" data-wow-delay="0.1s">Ripple Systems</h1>
             <p class="wow fadeInUp" data-wow-delay="0.2s">A proximity sensor system designed to serves a variety of purposes, from simple object-tracking all the way to complex emergency locating. </p>
-            <a href="#" class="console" style="width: 200px; text-align: center; background-color: lightseagreen" >Enter Console >></a>  
+            <a href="Trackersite/map.html" class="console" style="width: 200px; text-align: center; background-color: lightseagreen" >Enter Console >></a>  
             <div class="sub-form wow fadeInUp" data-wow-delay="0.3s">
               <form class="subscribe-form wow zoomIn" action="php/subscribe.php" method="post" name="subscribeform" id="subscribeform">
               <input class="mail" type="email" name="email" placeholder="Join the mailing list" autocomplete="off" id="subemail">
@@ -176,28 +176,28 @@
     <div class="pitch text-center">
       <div class="container">
         <div class="pitch-intro">
-          <h1 class="wow fadeInDown" data-wow-delay="0.2s">More Awesome Features</h1>
+          <h1 class="wow fadeInDown" data-wow-delay="0.2s">Awards and Achievements</h1>
           <p class="wow fadeInDown" data-wow-delay="0.2s"> Pellentesque eget dolor gravida, tempus purus ac, ultricies mauris. Etiam est nisl, molestie sed egestas bibendum, varius eu diam. Suspendisse est metus, ultrices sit amet dolor in, rhoncus malesuada mi.</p>
         </div>
         <div class="col-md-12">
           <div class="col-md-4 wow fadeInDown" data-wow-delay="0.2s">
             <div class="pitch-icon"> <i class="ion-ios-checkmark-outline"></i> </div>
             <div class="pitch-content">
-              <h1>Great Options</h1>
+              <h1>Research published</h1>
               <p> Aliquam vel euismod elit, sed suscipit est. Sed tincidunt venenatis ligula ac luctus. Fusce egestas volutpat mi sed pellentesque. </p>
             </div>
           </div>
           <div class="col-md-4 wow fadeInDown" data-wow-delay="0.2s">
             <div class="pitch-icon"> <i class="ion-ios-mic-outline"></i> </div>
             <div class="pitch-content">
-              <h1>Voice Callings</h1>
+              <h1>Startup pitches</h1>
               <p> Aliquam vel euismod elit, sed suscipit est. Sed tincidunt venenatis ligula ac luctus. Fusce egestas volutpat mi sed pellentesque. </p>
             </div>
           </div>
           <div class="col-md-4 wow fadeInDown" data-wow-delay="0.2s">
             <div class="pitch-icon"> <i class="ion-ios-folder-outline"></i> </div>
             <div class="pitch-content">
-              <h1>Sharing Files</h1>
+              <h1>Patent acquired</h1>
               <p> Aliquam vel euismod elit, sed suscipit est. Sed tincidunt venenatis ligula ac luctus. Fusce egestas volutpat mi sed pellentesque.  </p>
             </div>
           </div>
@@ -207,8 +207,8 @@
     <div class="feature-sub">
       <div class="container">
         <div class="sub-inner">
-          <h1 class="wow fadeInUp">Creative Landing App For Your Easy Life! Simple Reliable & Understandable for your customers </h1>
-          <a href="#" class="btn btn-action wow fadeInUp">Buy now</a> </div>
+          <h1 class="wow fadeInUp">A Convenient, Intuitive and Reliable locating device, for your friends and families</h1>
+          <a href="Trackersite/map.html" class="btn btn-action wow fadeInUp">Enter Console</a> </div>
       </div>
     </div>
     <div id="review-section" class="review-section">
@@ -218,36 +218,8 @@
             <div class="review-single"><img class="img-circle" src="images/customer1.png" alt="Client Testimonoal" />
               <div class="review-text wow fadeInUp" data-wow-delay="0.2s">
                 <p>Morbi eget dictum enim. Praesent sed quam sit amet lorem tempor rhoncus. <br>In hac habitasse platea dictumst. Vivamus in accumsan ex</p>
-                <h3>Johnathan Doe</h3>
+                <h3>Mike (Zhengyu) Qu</h3>
                 <h3>Marketing Head Matrix media</h3>
-              </div>
-            </div>
-            <div class="review-single"><img class="img-circle" src="images/customer2.png" alt="Client Testimonoal" />
-              <div class="review-text">
-                <p>Morbi eget dictum enim. Praesent sed quam sit amet lorem tempor rhoncus. <br>In hac habitasse platea dictumst. Vivamus in accumsan ex</p>
-                <h3>Oidila Matik</h3>
-                <h3>President Lexo Inc</h3>
-              </div>
-            </div>
-            <div class="review-single"><img class="img-circle" src="images/customer3.png" alt="Client Testimonoal" />
-              <div class="review-text">
-                <p>Morbi eget dictum enim. Praesent sed quam sit amet lorem tempor rhoncus. <br>In hac habitasse platea dictumst. Vivamus in accumsan ex</p>
-                <h3>- Alex Dattilo</h3>
-                <h3>CEO Optima Inc</h3>
-              </div>
-            </div>
-            <div class="review-single"><img class="img-circle" src="images/customer4.png" alt="Client Testimonoal" />
-              <div class="review-text">
-                <p>Morbi eget dictum enim. Praesent sed quam sit amet lorem tempor rhoncus. <br>In hac habitasse platea dictumst. Vivamus in accumsan ex</p>
-                <h3>- Robert Hammer</h3>
-                <h3>design head Omega Corp</h3>
-              </div>
-            </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
-              <div class="review-text">
-                <p>Morbi eget dictum enim. Praesent sed quam sit amet lorem tempor rhoncus. <br>In hac habitasse platea dictumst. Vivamus in accumsan ex</p>
-                <h3>- Rita Valentine</h3>
-                <h3>CEO Behena digital</h3>
               </div>
             </div>
           </div>
@@ -259,7 +231,7 @@
         <div class="col-md-12 col-sm-12 nopadding">
           <div class="pricing-intro">
             <h1 class="wow fadeInUp" data-wow-delay="0s">Pricing Options</h1>
-            <p class="wow fadeInUp" data-wow-delay="0.2s"> Ripple Systems offers a variety of products, eaching having their own purposes<br class="hidden-xs">tempore consequuntur officia ducimus unde doloribus quod unt repell </p>
+            <p class="wow fadeInUp" data-wow-delay="0.2s"> Ripple Systems offers a variety of plans depending on how this service would be used<br class="hidden-xs">tempore consequuntur officia ducimus unde doloribus quod unt repell </p>
           </div>
           <div class="col-sm-4">
             <div class="table-left wow fadeInUp" data-wow-delay="0.4s">
@@ -273,7 +245,6 @@
                   <li>Suspendisse quis metus</li>
                   <li>Vestibul varius fermentum erat</li>
                 </ul>
-                <button class="btn btn-primary btn-action btn-fill">Get Plan</button>
               </div>
             </div>
           </div>
@@ -290,7 +261,6 @@
                   <li>Suspendisse quis metus</li>
                   <li>Vestibul varius fermentum erat</li>
                 </ul>
-                <button class="btn btn-primary btn-action btn-fill">Buy Now</button>
               </div>
             </div>
           </div>
@@ -306,7 +276,6 @@
                   <li>Suspendisse quis metus</li>
                   <li>Vestibul varius fermentum erat</li>
                 </ul>
-                <button class="btn btn-primary btn-action btn-fill">Buy Now</button>
               </div>
             </div>
           </div>
