--- a/Trackersite/map.html
+++ b/Trackersite/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Map</title>
+    <title>Ripple Systems Console</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <script
@@ -183,7 +183,7 @@
         setInterval(updateData, 10000);
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQtjLwyMyJioPYPPer7wDX_cXS4uHNVsc&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCA4SWDYpN6XzzuFBVVZ76qkNtTc9d7Gso&callback=initMap"
     async defer></script>
   </body>
 </html>
